@@ -7,6 +7,13 @@ dist: trusty
 notifications:
   email: false
 
+# with building pushes enabled on travis we would get
+# two builds for every new commit pushed to a branch
+# for a PR. So we disable build-on-push for all branches
+# except the ones whitelisted here.
+branches:
+  only: 
+    - master
 
 matrix:
   fast_finish: true
